# zolana

./: .dockerignore  .env.example  .fixtures-version  .gitignore  .ignore  CLAUDE.md  Cargo.toml  NAMING.md  README.md  THIRD_PARTY_NOTICES  justfile  package-lock.json  package.json  pingpong.sh  pingpong_parallel.sh
bench/bloom-filter/: CU_BENCHMARK.md  Cargo.toml
bench/bloom-filter/src/: lib.rs
bench/bloom-filter/tests/: bench_cu.rs
bench/tree/: CU_BENCHMARK.md  CU_BENCHMARK_NOTES.md  Cargo.toml
bench/tree/src/: lib.rs
bench/tree/tests/: bench_cu.rs
cli/: Cargo.toml  README.md
cli/src/: args.rs  cli_config.rs  config.rs  config_cmd.rs  http.rs  localnet.rs  main.rs  merge_service_pid.rs  process.rs  prover.rs  release.rs  wallet_cli.rs
cli/src/wallet_cli/: balance.rs  deposit.rs  material.rs  mod.rs  registry.rs  reservation.rs  resolve.rs  sync.rs  test_mint.rs  transaction.rs  tree.rs  util.rs  withdraw.rs
examples/rust-client/: BUGS.md  Cargo.toml  README.md
examples/rust-client/examples/: action_spl_deposit.rs  action_spl_transfer.rs  action_spl_withdraw.rs  action_sync_balance.rs  instruction_spl_deposit.rs  instruction_spl_transfer.rs  instruction_spl_withdraw.rs  instruction_sync_balance.rs
examples/rust-client/src/: lib.rs
forester/: .env.example  Cargo.toml  Dockerfile  README.md  justfile
forester/src/: cli.rs  config.rs  epoch_manager.rs  errors.rs  forest.rs  forester_status.rs  info.rs  lib.rs  logging.rs  main.rs  photon.rs  queue_helpers.rs  run.rs  smart_transaction.rs  utils.rs
forester/src/compressible/: subscriber.rs
forester/src/rollover/: operations.rs
forester/tests/: e2e_test.rs  priority_fee_test.rs  test_indexer_interface.rs  test_nullify_state_v1_multi_tx_size.rs
forester/tests/legacy/: address_v2_test.rs
global-shared-viewkey/: Cargo.toml  build.rs  spec.md
global-shared-viewkey/go/: go.mod  go.sum  shamir_ffi.go
global-shared-viewkey/src/: authority.rs  error.rs  ffi.rs  lib.rs  share.rs
global-shared-viewkey/tests/: bdd.rs
global-shared-viewkey/tests/features/: reconstruct.feature
global-shared-viewkey/tests/steps/: common.rs  mod.rs  reconstruct.rs
program-libs/account-checks/: CLAUDE.md  Cargo.toml  README.md
program-libs/account-checks/src/: account_iterator.rs  checks.rs  error.rs  lib.rs  packed_accounts.rs
program-libs/batched-merkle-tree/: Cargo.toml  README.md
program-libs/batched-merkle-tree/src/: batch.rs  constants.rs  errors.rs  events.rs  initialize_address_tree.rs  initialize_state_tree.rs  lib.rs  merkle_tree.rs  merkle_tree_metadata.rs  merkle_tree_update.rs  queue.rs  queue_batch_metadata.rs  rent.rs  rollover_address_tree.rs  rollover_state_tree.rs  zero_copy.rs
program-libs/batched-merkle-tree/tests/: init_roots.rs  nullifier_tree.rs
program-libs/bloom-filter/: Cargo.toml
program-libs/bloom-filter/src/: lib.rs
program-libs/event/: Cargo.toml
program-libs/event/src/: lib.rs  output_data.rs  output_utxo.rs  program_test.rs  proofless.rs  tag.rs
program-libs/event/tests/: indexed_events.rs
program-libs/hasher/: Cargo.toml  README.md
program-libs/hasher/src/: errors.rs  hash_to_field_size.rs  keccak.rs  lib.rs  poseidon.rs  sha256.rs
program-libs/hasher/tests/: bigint.rs  bool_fe.rs  bytes32_proof_input_hash.rs  ciphertext_hash.rs  hash_bytes.rs  hash_chain.rs  hash_field.rs  hash_to_field_size.rs  pack32.rs  pack33.rs  pack_be.rs  pack_info.rs  right_align.rs
program-libs/interface/: Cargo.toml
program-libs/interface/src/: error.rs  event.rs  lib.rs  merge_utils.rs  pda.rs  shape.rs  transact_event.rs
program-libs/interface/tests/: instruction_roundtrip.rs  protocol_config.rs  sol_asset.rs  user_registry.rs  user_registry_state.rs
program-libs/merkle-tree-metadata/: Cargo.toml
program-libs/merkle-tree-metadata/src/: access.rs  errors.rs  lib.rs  merkle_tree.rs  queue.rs  rollover.rs
program-libs/tree/: Cargo.toml
program-libs/tree/src/: lib.rs  smt.rs
program-libs/tree/tests/: init.rs
program-libs/user-registry-interface/: Cargo.toml
program-libs/user-registry-interface/src/: instruction.rs  lib.rs  state.rs
program-libs/user-registry-interface/tests/: user_registry.rs  user_registry_state.rs
program-libs/verifier/: Cargo.toml  README.md
program-libs/verifier/src/: lib.rs
program-libs/zero-copy-vec/: Cargo.toml
program-libs/zero-copy-vec/src/: bounded_slice.rs  cyclic_slice.rs  errors.rs  lib.rs  util.rs
program-libs/zero-copy-vec/tests/: bounded_slice_layout.rs  cyclic_slice_layout.rs  error_equivalence.rs  layout_compat.rs  wincode_smoke.rs
program-tests/byte-compat/: Cargo.toml
program-tests/byte-compat/src/: lib.rs
program-tests/byte-compat/tests/: upstream_parse.rs
program-tests/cpi-test-program/: Cargo.toml  PLAN_program_owned_account.md
program-tests/cpi-test-program/src/: lib.rs
program-tests/cpi-test-program/tests/: actor.rs  cpi_lifecycle.rs  deposit_action.rs  localnet.rs  world.rs
program-tests/create-address-test-program/: Cargo.toml
program-tests/shielded-pool/: CU_BENCHMARK.md  Cargo.toml
program-tests/shielded-pool/src/: lib.rs
program-tests/shielded-pool/tests/: batch_update_e2e.rs  bdd.rs  bench_cu.rs  end_to_end.rs  localnet_deposit.rs  localnet_e2e.rs  localnet_photon_e2e.rs  localnet_proofless_shield.rs  localnet_wallet_cli_e2e.rs  pool_admin.rs  proofless_shield.rs  spl.rs  transact_e2e.rs  zone_config.rs  zone_proofless_shield.rs
program-tests/spp-test-validator/: CLAUDE.md  Cargo.toml
program-tests/spp-test-validator/tests/: actor.rs  deposit_action.rs  lifecycle.rs  localnet.rs  world.rs
program-tests/squads-zone-smart-account/: Cargo.toml
program-tests/test-utils/: Cargo.toml
program-tests/test-utils/src/: lib.rs  localnet.rs  smart_account.rs  spl.rs
program-tests/user-registry/: Cargo.toml
program-tests/zone-test-program/: Cargo.toml
programs/registry/: Cargo.toml
programs/shielded-pool/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: create_release.rs  init_protocol.rs  main.rs  spec_gate.rs  spec_lint.rs  term.rs  update_protocol_config.rs
(+2025 files in other folders)
