[workspace]
members = [
    "program-libs/interface",
    "program-tests/shielded-pool",
    "programs/shielded-pool",
    "program-tests/zone-test-program",
    "forester",
    "prover/client",
    "cli",
    "sdk-libs/keypair",
    "sdk-libs/program-test",
    "sdk-libs/transaction",
    "xtask",
]
default-members = [
    "prover/client",
    "program-libs/interface",
    "programs/shielded-pool",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Local workspace crates.
zolana-interface = { path = "program-libs/interface", version = "0.1.0" }
zolana-keypair = { path = "sdk-libs/keypair", version = "0.1.0" }
zolana-program-test = { path = "sdk-libs/program-test", version = "0.23.0" }
zolana-transaction = { path = "sdk-libs/transaction", version = "0.1.0" }
shielded-pool-program = { path = "programs/shielded-pool", version = "0.1.0" }

# Published privacy-program crates.
light-batched-merkle-tree = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475", version = "0.11.0", default-features = false }
light-hasher = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475", version = "5.0.0", default-features = false }
light-indexed-array = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475", version = "0.3.0" }
light-merkle-tree-reference = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475", version = "4.0.0" }
light-poseidon = "0.4.0"
light-verifier = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475", version = "10.0.0" }
light-sparse-merkle-tree = "0.3.0"

# Solana and SPL.
borsh = { version = "1.5", default-features = false, features = ["derive"] }
solana-address = { version = "2.6", features = ["copy", "decode"] }
solana-bn254 = "3.2.1"
solana-commitment-config = "3.1.1"
solana-instruction = "3.4"
solana-keypair = "3.1.2"
solana-message = "3.1"
solana-program = "4.0"
solana-pubkey = "4.2"
solana-rpc-client = "4.0.0-rc.0"
solana-signature = "3.4.0"
solana-signer = "3.0"
solana-transaction = "3.1"
pinocchio = "0.11"
pinocchio-system = "0.6.0"

# Async, HTTP, logging, and utilities.
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
hex = "0.4"
litesvm = "0.12"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1"
serde_json = "1.0"
serial_test = "3.2.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Prover math/crypto.
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"

# Client keypair crypto.
p256 = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic", "ecdsa", "hash2curve", "std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12"
zeroize = "1"
criterion = "0.5"
cucumber = "0.22"
proptest = "1"
wincode = { version = "0.5", features = ["derive"] }

[patch.crates-io]
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "4e6cacff2f4ff53744fda0509f5e62545fd99aa6" }
light-account-checks = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-batched-merkle-tree = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-bloom-filter = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-hasher = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-indexed-array = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-macros = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-merkle-tree-metadata = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-verifier = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }
light-merkle-tree-reference = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "eecd83af918f0935875612d716213952a50d7475" }

[profile.dev]
opt-level = 0
debug = "line-tables-only"
strip = "none"

[profile.dev.package.syn]
opt-level = 3

[profile.dev.package.proc-macro2]
opt-level = 3

[profile.dev.package.quote]
opt-level = 3

[profile.dev.package.serde_derive]
opt-level = 3

[profile.dev.package.ark-ff-macros]
opt-level = 3

[profile.dev.package.ark-ff-asm]
opt-level = 3

[profile.dev.package.p256]
opt-level = 3

[profile.dev.package.primeorder]
opt-level = 3

[profile.dev.package.elliptic-curve]
opt-level = 3

[profile.dev.package.crypto-bigint]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.hmac]
opt-level = 3

[profile.dev.package.hkdf]
opt-level = 3

[profile.dev.package.aes]
opt-level = 3

[profile.dev.package.aes-gcm]
opt-level = 3

[profile.dev.package.ghash]
opt-level = 3

[profile.dev.package.polyval]
opt-level = 3

[profile.dev.package.ark-ff]
opt-level = 3

[profile.dev.package.ark-bn254]
opt-level = 3

[profile.dev.package.light-poseidon]
opt-level = 3

[profile.release]
overflow-checks = true
