[workspace]
members = [
    "forester",
    "program-libs/account-checks",
    "program-libs/batched-merkle-tree",
    "program-libs/bloom-filter",
    "program-libs/event",
    "program-libs/hasher",
    "program-libs/indexed-array",
    "program-libs/interface",
    "program-libs/user-registry-interface",
    "program-libs/merkle-tree-metadata",
    "program-libs/tree",
    "program-libs/zero-copy-vec",
    "program-tests/shielded-pool",
    "program-tests/spp-test-validator",
    "program-tests/test-utils",
    "program-tests/user-registry",
    "programs/shielded-pool",
    "programs/user-registry",
    "program-tests/zone-test-program",
    "cli",
    "sdk-libs/client",
    "sdk-libs/keypair",
    "sdk-libs/merkle-tree",
    "sdk-libs/zolana-api",
    "sdk-libs/program-test",
    "sdk-libs/transaction",
    "xtask",
]
default-members = [
    "forester",
    "program-libs/interface",
    "programs/shielded-pool",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Solana platform-tools Cargo 1.84 cannot build edition2024 crates pulled by
# newer time-core releases.
time = ">=0.3, <0.3.46"

# Local workspace crates.
zolana-event = { path = "program-libs/event", version = "0.1.0" }
zolana-interface = { path = "program-libs/interface", version = "0.1.0" }
zolana-user-registry-interface = { path = "program-libs/user-registry-interface", version = "0.1.0" }
zolana-tree = { path = "program-libs/tree", version = "0.1.0" }
zolana-keypair = { path = "sdk-libs/keypair", version = "0.1.0" }
zolana-api = { path = "sdk-libs/zolana-api", version = "0.1.0" }
zolana-program-test = { path = "sdk-libs/program-test", version = "0.23.0" }
zolana-transaction = { path = "sdk-libs/transaction", version = "0.1.0" }
zolana-client = { path = "sdk-libs/client", version = "0.1.0" }
zolana-merkle-tree = { path = "sdk-libs/merkle-tree", version = "4.0.0" }
zolana-test-utils = { path = "program-tests/test-utils", version = "0.1.0" }
shielded-pool-program = { path = "programs/shielded-pool", version = "0.1.0" }
zolana-user-registry = { path = "programs/user-registry", version = "0.1.0", default-features = false, features = ["no-entrypoint"] }
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "6f44fe18ece7e9f2d09141707f7822e9321c7b66", features = ["bsb22"] }

# Published Light Protocol crates.
aligned-sized = "1.1.0"
light-array-map = "0.2.0"
light-account-checks = { path = "program-libs/account-checks", version = "0.8.0", default-features = false }
light-batched-merkle-tree = { path = "program-libs/batched-merkle-tree", version = "0.11.0" }
light-bloom-filter = { path = "program-libs/bloom-filter", version = "0.6.0" }
light-hasher = { path = "program-libs/hasher", version = "5.0.0", default-features = false }
light-indexed-array = { path = "program-libs/indexed-array", version = "0.3.0" }
light-instruction-decoder = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "dfaf338a92d746e41349706ab9f2b53280fc0673", version = "0.23.0", default-features = false }
light-merkle-tree-metadata = { path = "program-libs/merkle-tree-metadata", version = "0.11.0" }
light-poseidon = "0.4.0"
light-program-profiler = "0.1.1"
light-zero-copy-vec = { path = "program-libs/zero-copy-vec", version = "0.1.0" }
light-sparse-merkle-tree = "0.3.0"

# Solana and SPL.
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
borsh = { version = "1.5", default-features = false, features = ["derive"] }
solana-account = "3.4"
solana-account-info = "3.1"
solana-account-view = "2.0"
solana-account-decoder = "4.0.0-rc.0"
solana-account-decoder-client-types = "4.0.0-rc.0"
solana-address = { version = "2.6", features = ["atomic", "borsh", "bytemuck", "copy", "decode", "wincode"] }
solana-address-lookup-table-interface = { version = "3.0", features = ["bytemuck", "bincode"] }
solana-banks-client = { version = "4.0.0-rc.0", features = ["agave-unstable-api"] }
solana-bn254 = "3.2.1"
solana-client = "4.0.0-rc.0"
solana-clock = "3.0"
solana-commitment-config = "3.1"
solana-compute-budget = "3.1"
solana-compute-budget-interface = "3.0"
solana-cpi = "3.1"
solana-epoch-info = "3.1"
solana-hash = "4.3"
solana-instruction = "3.4"
solana-keypair = "3.1.2"
solana-loader-v3-interface = "8.0"
solana-message = "3.1"
solana-msg = { version = "3.1", default-features = false }
solana-program = "4.0"
solana-program-error = "3.0"
solana-program-pack = "3.1"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
solana-rent = "4.2"
solana-rpc-client = "4.0.0-rc.0"
solana-rpc-client-api = "4.0.0-rc.0"
solana-security-txt = "1.1.2"
solana-sdk = "3.0"
solana-signature = "3.4"
solana-signer = "3.0"
solana-system-interface = { version = "3.2", features = ["bincode"] }
solana-sysvar = { version = "4.0", features = ["bincode"] }
solana-transaction = "3.1"
solana-transaction-error = "3.0"
solana-transaction-status = "4.0.0-rc.0"
solana-transaction-status-client-types = "4.0.0-rc.0"
spl-token = "9.0"
spl-token-2022 = { version = "10.0", features = ["no-entrypoint"] }
spl-token-2022-interface = "2.0"
spl-pod = "0.7"
pinocchio = "0.11"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.0"
pinocchio-token-program = { git = "https://github.com/Lightprotocol/token", rev = "f7bee9bbc8039c224a88ea76e9ae2edd78e0f9c3" }

# Async, HTTP, logging, and utilities.
anyhow = "1.0"
async-channel = "2.5"
async-trait = "0.1.82"
arrayvec = "0.7"
base64 = "0.13"
bb8 = "0.8.6"
bitvec = { version = "1.0.1", default-features = false }
bs58 = "0.5.1"
bytemuck = { version = "1.19.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
dashmap = "6.1.0"
darling = "0.21"
env_logger = "0.11"
futures = "0.3.31"
governor = "0.8.0"
heck = "0.5"
hex = "0.4"
lazy_static = "1.5.0"
log = "0.4"
litesvm = "0.12"
num-bigint = "0.4.6"
num-traits = "0.2.19"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["visit-mut", "full"] }
tabled = "0.20"
thiserror = "2.0"
tinyvec = "1.10.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
cucumber = "0.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
zerocopy = "0.8.25"

# Prover math/crypto.
ark-bn254 = "0.5"
ark-ff = "=0.5.0"
ark-serialize = "0.5"
ark-std = "0.5"

# Client keypair crypto.
p256 = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic", "ecdsa", "hash2curve", "std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12"
zeroize = "1"
criterion = "0.5"
proptest = "1"
wincode = { version = "0.5", features = ["derive"] }

[patch.crates-io]
light-account-checks = { path = "program-libs/account-checks" }
light-batched-merkle-tree = { path = "program-libs/batched-merkle-tree" }
light-bloom-filter = { path = "program-libs/bloom-filter" }
light-hasher = { path = "program-libs/hasher" }
light-indexed-array = { path = "program-libs/indexed-array" }
light-instruction-decoder = { git = "https://github.com/helius-labs/privacy-program-libs", rev = "dfaf338a92d746e41349706ab9f2b53280fc0673" }
light-merkle-tree-metadata = { path = "program-libs/merkle-tree-metadata" }

[profile.dev]
opt-level = 0
debug = "line-tables-only"
strip = "none"

[profile.dev.package.syn]
opt-level = 3

[profile.dev.package.proc-macro2]
opt-level = 3

[profile.dev.package.quote]
opt-level = 3

[profile.dev.package.serde_derive]
opt-level = 3

[profile.dev.package.ark-ff-macros]
opt-level = 3

[profile.dev.package.ark-ff-asm]
opt-level = 3

[profile.dev.package.p256]
opt-level = 3

[profile.dev.package.primeorder]
opt-level = 3

[profile.dev.package.elliptic-curve]
opt-level = 3

[profile.dev.package.crypto-bigint]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.hmac]
opt-level = 3

[profile.dev.package.hkdf]
opt-level = 3

[profile.dev.package.aes]
opt-level = 3

[profile.dev.package.aes-gcm]
opt-level = 3

[profile.dev.package.ghash]
opt-level = 3

[profile.dev.package.polyval]
opt-level = 3

[profile.dev.package.ark-ff]
opt-level = 3

[profile.dev.package.ark-bn254]
opt-level = 3

[profile.dev.package.light-poseidon]
opt-level = 3

[profile.release]
overflow-checks = true
