[package]
name = "zolana-cli"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "zolana"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
zolana-client = { workspace = true }
zolana-interface = { workspace = true }
zolana-keypair = { workspace = true }
zolana-transaction = { workspace = true }
