[package]
name = "zolana-cli"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "zolana"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
zolana-client = { workspace = true, features = ["indexer-api", "solana-rpc"] }
zolana-interface = { workspace = true }
zolana-keypair = { workspace = true }
zolana-transaction = { workspace = true }
