[package]
name = "zolana-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "zolana"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
zolana-client = { workspace = true, features = ["client"] }
zolana-interface = { workspace = true, features = ["solana"] }
zolana-user-registry-interface = { workspace = true, features = ["solana"] }
zolana-keypair = { workspace = true }
zolana-transaction = { workspace = true }
