[package]
name = "forester"
version = "1.1.0"
edition = "2021"
publish = false

[features]
default = []

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"

# Solana client + transaction building.
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }

# Shielded-pool interface for instruction-data shapes and builders.
zolana-interface = { workspace = true, features = ["solana"] }
