[package]
name = "forester"
version = "1.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"

# Solana client + transaction building.
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }

# Shielded-pool interface for instruction-data shapes and builders.
zolana-interface = { workspace = true, features = ["solana"] }
