[package]
name = "zolana-global-shared-viewkey"
version = "0.1.0"
description = "Global shared view key splitting PoC: a P-256 shared view key Shamir-split across entities, hybrid-encrypted (ECIES) and signed, reconstructed from a quorum."
license = "Apache-2.0"
edition.workspace = true
publish = false

[dependencies]
p256 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

[[test]]
name = "bdd"
harness = false
