[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
bs58 = { workspace = true }
sha2 = { workspace = true }
groth16-solana = { workspace = true }
zolana-interface = { workspace = true }
zolana-user-registry-interface = { workspace = true }
zolana-program-test = { workspace = true }
