[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
bincode = "1.3"
bs58 = { workspace = true }
sha2 = { workspace = true }
groth16-solana = { workspace = true, features = ["vk"] }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
rings-client = { workspace = true, features = ["solana-rpc"] }
rings-interface = { workspace = true }
rings-transaction = { workspace = true }
rings-test-utils = { workspace = true }
rings-user-registry-interface = { workspace = true }
rings-program-test = { workspace = true }
