[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = "1.3"
bs58 = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
groth16-solana = { workspace = true, features = ["gnark-vk", "circom-vk"] }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
zolana-client = { workspace = true, features = ["solana-rpc"] }
zolana-interface = { workspace = true }
zolana-transaction = { workspace = true }
zolana-test-utils = { workspace = true }
zolana-user-registry-interface = { workspace = true }
zolana-program-test = { workspace = true }
swap-program = { path = "../sdk-tests/zk-program-swap/program" }
