[package]
name = "light-batched-merkle-tree"
version = "0.11.0"
description = "Batch Merkle tree implementation."
readme = "README.md"
repository = "https://github.com/helius-labs/privacy-program-libs"
license = "Apache-2.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = [
    # Used only through cfg(target_os = "solana") sysvar paths.
    "solana-sysvar",
]

[features]
default = []
test-only = []
log = ["dep:solana-msg", "light-merkle-tree-metadata/log"]

[dependencies]
light-account-checks = { workspace = true }
aligned-sized = { workspace = true }
solana-program-error = { workspace = true }
solana-sysvar = { workspace = true }
solana-msg = { workspace = true, features = ["alloc"], optional = true }
solana-address = { workspace = true }
light-zero-copy-vec = { workspace = true }
light-hasher = { workspace = true, features = ["poseidon", "keccak"] }
light-bloom-filter = { workspace = true }
groth16-solana = { workspace = true }
thiserror = { workspace = true }
light-merkle-tree-metadata = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
zerocopy = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
zolana-merkle-tree = { workspace = true }
light-account-checks = { workspace = true, features = ["test-only"] }
light-hasher = { workspace = true, features = ["keccak"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(target_os, values("solana"))']
